refactor: update the swag file
